--- a/style.css
+++ b/style.css
@@ -75,3 +75,23 @@ li:hover .bottom-line {
 h1, h2, h3, h4, h5{
   font-family: var(--font-jost);
 }
+
+
+.swiper {
+      width: 100%;
+      height: 100%;
+    }
+
+    .swiper-slide {
+      display: flex !important;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .swiper-slide img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
