--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   margin: 0;
   padding: 0;
   font-family: var(--font-inter);
+   scroll-behavior: smooth;
 }
 
 :root {
@@ -78,20 +79,57 @@ h1, h2, h3, h4, h5{
 
 
 .swiper {
-      width: 100%;
-      height: 100%;
-    }
+width: 100%;
+  height: 100%;
+}
 
-    .swiper-slide {
-      display: flex !important;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-    }
+.swiper-slide {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
 
-    .swiper-slide img {
-      display: block;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.carousel-wrapper {
+  width: 100%;
+  overflow: hidden;
+}
+
+.carousel {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  scroll-behavior: smooth;
+  /* width: calc(259px * 18); */
+  animation: scroll-left 40s linear infinite;
+  animation-play-state: running;
+}
+.carousel-left {
+  animation: scroll-left 60s linear infinite;
+}
+.carousel-right {
+  animation: scroll-right 60s linear infinite;
+}
+
+@keyframes scroll-left {
+  0%{
+    transform: translateX(0);
+  }
+  100%{
+    transform: translateX(calc(-259px * 6));
+  }
+}
+@keyframes scroll-right {
+  0%{
+    transform: translateX(calc(-259px * 6));
+  }
+  100%{
+    transform: translateX(0);
+  }
+}
