--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   margin: 0;
   padding: 0;
   font-family: var(--font-inter);
-   scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 :root {
@@ -16,32 +16,44 @@
   --font-jost: "Jost", sans-serif;
 }
 
+
+.hero-section svg {
+  z-index: 5;
+}
+
+.hero-section svg:nth-child(3) {
+  z-index: 4;
+}
+
+
+
 /* ==========================HEADER STYLE====================================== */
 .bottom-line {
-    transform: translateY(20px);
-    opacity: 0;
-    border-radius: 10px;
-    transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(20px);
+  opacity: 0;
+  border-radius: 10px;
+  transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 li:hover .bottom-line,
 li:active .bottom-line {
-    transform: translateY(0px);
-    opacity: 1;
+  transform: translateY(0px);
+  opacity: 1;
 }
 
-.btn-primary{
-    background-color: var(--color-brand-500);
-    color: white;
-    padding: 14px 24px;
-    border-radius: 56px;
-    transition: all 300ms ease-in-out;
-}
-.btn-primary:hover{
-    background-color: var(--color-brand-600);
+.btn-primary {
+  background-color: var(--color-brand-500);
+  color: white;
+  padding: 14px 24px;
+  border-radius: 56px;
+  transition: all 300ms ease-in-out;
 }
 
-.btn-secondary{
+.btn-primary:hover {
+  background-color: var(--color-brand-600);
+}
+
+.btn-secondary {
   background: transparent;
   color: var(--color-brand-600);
   outline: 1px solid var(--color-brand-600);
@@ -49,7 +61,8 @@ li:active .bottom-line {
   border-radius: 56px;
   transition: all 300ms ease-in-out;
 }
-.btn-secondary:hover{
+
+.btn-secondary:hover {
   background-color: var(--color-brand-600);
   color: white;
 }
@@ -58,8 +71,9 @@ li:active .bottom-line {
   opacity: 0;
   transform: translateY(-20px) scaleY(0.95);
   pointer-events: none;
-  transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1), transform 0.3s cubic-bezier(0.4,0,0.2,1);
+  transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1), transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 #mobile-menu.open {
   opacity: 1;
   transform: translateY(0) scaleY(1);
@@ -67,20 +81,25 @@ li:active .bottom-line {
 }
 
 
-.hero-section{
-    background: url("./assest/hero-bg.png");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+.hero-section {
+  background: url("./assest/hero-bg.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 
 }
-h1, h2, h3, h4, h5{
+
+h1,
+h2,
+h3,
+h4,
+h5 {
   font-family: var(--font-jost);
 }
 
 
 .swiper {
-width: 100%;
+  width: 100%;
   height: 100%;
 }
 
@@ -111,26 +130,31 @@ width: 100%;
   animation: scroll-left 40s linear infinite;
   animation-play-state: running;
 }
+
 .carousel-left {
   animation: scroll-left 60s linear infinite;
 }
+
 .carousel-right {
   animation: scroll-right 60s linear infinite;
 }
 
 @keyframes scroll-left {
-  0%{
+  0% {
     transform: translateX(0);
   }
-  100%{
+
+  100% {
     transform: translateX(calc(-259px * 6));
   }
 }
+
 @keyframes scroll-right {
-  0%{
+  0% {
     transform: translateX(calc(-259px * 6));
   }
-  100%{
+
+  100% {
     transform: translateX(0);
   }
 }
